delete bg color form fields

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -81,11 +81,11 @@
                                    <form>
                                        <div class="form-group font-weight-bold ">
                                            <label for="newName">First name</label>
-                                           <input type="text" class="form-control bg-warning" id="newName">
+                                           <input type="text" class="form-control" id="newName">
                                        </div>
                                        <div class="form-group font-weight-bold">
                                            <label for="newLastName">Second name</label>
-                                           <input type="text" class="form-control bg-warning" id="newLastName">
+                                           <input type="text" class="form-control" id="newLastName">
                                        </div>
                                        <div class="form-group font-weight-bold">
                                            <label for="newAge">Age</label>
@@ -93,7 +93,7 @@
                                        </div>
                                        <div class="form-group font-weight-bold">
                                            <label for="newEmail">Email</label>
-                                           <input type="text" class="form-control bg-warning" id="newEmail">
+                                           <input type="text" class="form-control" id="newEmail">
                                        </div>
                                        <div class="form-group font-weight-bold">
                                            <label for="newPassword">Password</label>
