--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -107,7 +107,7 @@
                                            </select>
                                        </div>
                                        <div>
-                                           <button type="button" onclick="addUser()" class="btn btn-success">Add new user</button>
+                                           <button type="button" onclick="addUser()" data-toggle="tab" href="#users" class="btn btn-success">Add new user</button>
                                        </div>
                                    </form>
                                </div>
@@ -222,26 +222,6 @@
                         <button type="button" class="btn btn-danger" onclick="" id="acceptDelete">Delete</button>
                     </div>
                 </form>
-            </div>
-        </div>
-    </div>
-
-    <!-- success modal -->
-    <div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" >Success</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body text-center">
-                    User added!
-                </div>
-                <div class="modal-footer text-center">
-                    <button type="button" data-toggle="tab" href="#users" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
             </div>
         </div>
     </div>
